# netflex

./: .gitignore  Cargo.toml  README.md  todo.md
backend/: Cargo.toml  clippy.sh  config-local.toml  todo.md
backend/crates/domain/src/: error.rs  lib.rs
backend/crates/domain/src/shared/: config.rs
backend/crates/plugins/persistence/: Cargo.toml
backend/crates/plugins/persistence/src/: lib.rs
backend/crates/plugins/web/: Cargo.toml
backend/crates/plugins/web/src/: config.rs  extensions.rs  lib.rs  main.rs  templates.rs
backend/crates/plugins/web/src/controllers/: audios.rs  files.rs  mod.rs  settings.rs  statics.rs  videos.rs
backend/crates/plugins/web/src/controllers/stream/: mod.rs  range.rs
backend/crates/plugins/web/static/bootstrap/: README.txt
backend/crates/plugins/web/templates/views/audios/: player.html
backend/crates/plugins/web/templates/views/videos/: list.html  player.html
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/logic/: mod.rs
crates/domain/src/logic/file/: find_all_audios.rs
crates/domain/src/logic/stream/: action.rs  chunk.rs  range.rs
crates/domain/src/logic/update/: action.rs
crates/domain/src/persistence/db/: connection.rs
crates/libs/numbers/src/: lib.rs
crates/plugins/persistence/: Cargo.toml
crates/plugins/persistence/src/db/: database.rs
crates/plugins/persistence/src/file/: adapters.rs  entity.rs
crates/plugins/web/: Cargo.toml
crates/plugins/web/src/: templates.rs
crates/plugins/web/src/controllers/: audios.rs  files.rs  index.rs  mod.rs  videos.rs
(+29 files in other folders)
